# test

./: README.md  build.gradle  gradle.properties  local.properties  settings.gradle
app/: CMakeLists.txt  build.gradle
app/key/: untouch.jks
app/src/main/: AndroidManifest.xml
app/src/main/assets/: configure.yaml  dsm_jtt808.cfg  dsm_log.cfg
app/src/main/cpp/: MediaHal.h  Util.h  api.h  cameras.cc  cameras.h  encrypting.cc  interface.cc  interface.h  jni_part.cpp  main.cpp  native-lib.cpp  total_flow.cc  total_flow.h
app/src/main/cpp/aes/include/: interface.h  sw2001_aes.h  type.h
app/src/main/cpp/aes/src/: example.c  example2.c  interface.c  sw2001.c  sw2001_aes.c  sw200x_aes.c
app/src/main/cpp/algorithm/: CMakeLists.txt
app/src/main/cpp/algorithm/align/: CMakeLists.txt
app/src/main/cpp/algorithm/align/include/: align_method.h
app/src/main/cpp/algorithm/align/src/: align_method.cpp  shape_predict_untouch.cc
app/src/main/cpp/algorithm/face_detection/: CMakeLists.txt
app/src/main/cpp/algorithm/face_detection/include/: detector.h  face.h
app/src/main/cpp/algorithm/face_detection/src/: detector.cc  onet.cc  pnet.cc  rnet.cc
app/src/main/cpp/algorithm/faceid/: CMakeLists.txt
app/src/main/cpp/algorithm/faceid/include/: faceID.h
app/src/main/cpp/algorithm/faceid/src/: faceAttribute.cpp  faceID.cpp
app/src/main/cpp/algorithm/gaze_tracking/: CMakeLists.txt
app/src/main/cpp/algorithm/gaze_tracking/include/: GazeEstimation.h  LandmarkDetectorModel.h  LandmarkDetectorParameters.h  Visualizer.h
app/src/main/cpp/algorithm/gaze_tracking/src/: CCNF_patch_expert.cpp  GazeEstimation.cpp  ImageCapture.cpp  LandmarkDetectorFunc.cpp  LandmarkDetectorParameters.cpp  PDM.cpp  Patch_experts.cpp  PoseEyes.cpp  VisualizationUtils.cpp  Visualizer.cpp
app/src/main/cpp/algorithm/head_pose/: CMakeLists.txt
app/src/main/cpp/algorithm/head_pose/include/: head_pose_estimator.h
app/src/main/cpp/algorithm/head_pose/src/: head_pose_estimator.cc
app/src/main/cpp/algorithm/landmark/: CMakeLists.txt
app/src/main/cpp/algorithm/object_detection/: CMakeLists.txt
app/src/main/cpp/algorithm/object_detection/src/: objDetection.cpp
app/src/main/cpp/algorithm/tvm_runner/: CMakeLists.txt  test_face_module.cc  tvm_data.cc  tvm_data.h  tvm_runner.cc  tvm_runner.h
app/src/main/cpp/algorithm/utilities/: CMakeLists.txt
app/src/main/cpp/algorithm/utilities/include/: utils.h
app/src/main/cpp/algorithm/utilities/src/: transform.cpp  utils.cc
app/src/main/cpp/dsm_strategy/: CMakeLists.txt  config_tracker.cc  config_tracker.h  distract_judger.cc  distract_judger.h  eye_mouth_plus.cc  eye_mouth_plus.h  eyemouthstatus.cc  head_pose_states.cc  head_pose_states.h  judger.cc  judger.h  main.cpp  smoke_judger.cc  smoke_judger.h
app/src/main/cpp/dsm_strategy/judgement_strategy/: alignment_detection.cc  call_judger.cc  call_judger_plus.cc  call_judger_plus.h  distraction_judger.cc  judger.cc  judger.h  smoke_judger.cc  yawn_judger.cc
app/src/main/cpp/dsm_strategy/utils/: CMakeLists.txt
app/src/main/cpp/dsm_strategy/utils/file/: file_read_write_utils.cc
app/src/main/cpp/include/dlib/: config.h  error.h  serialize.h  smart_pointers_thread_safe.h
app/src/main/cpp/include/dlib/dnn/: layers_abstract.h  loss.h  loss_abstract.h
app/src/main/cpp/include/dlib/entropy_decoder/: entropy_decoder_kernel_abstract.h
app/src/main/cpp/include/dlib/geometry/: point_transforms_abstract.h
app/src/main/cpp/include/dlib/global_optimization/: global_function_search.cpp
app/src/main/cpp/include/dlib/image_keypoint/: surf.h
app/src/main/cpp/include/dlib/image_processing/: frontal_face_detector.h  object_detector.h  object_detector_abstract.h  scan_fhog_pyramid.h  scan_fhog_pyramid_abstract.h  scan_image_boxes.h  scan_image_boxes_abstract.h  scan_image_custom.h  scan_image_custom_abstract.h  scan_image_pyramid.h  scan_image_pyramid_abstract.h
app/src/main/cpp/include/dlib/image_transforms/: edge_detector_abstract.h
app/src/main/cpp/include/dlib/java/: swig_test.java
app/src/main/cpp/include/dsm/: Util.h  cameras.h  total_flow.h
app/src/main/cpp/message/: .gitignore  client_conn.cpp  client_conn.h  client_conn_manager.cpp  client_conn_manager.h  hp_socket_helper.cpp  hp_socket_helper.h  main.cpp  msg_process.cpp  msg_process.h
app/src/main/cpp/message/api/: dsm_jtt808_api.h
app/src/main/cpp/message/base/: config_file.h  dsm_log.h  file_helper.cpp  file_helper.h  jtt808_base.cpp  jtt808_base.h  log4z.cpp  log4z.h  msg_def.h  public_def.h  type_def.h  ut_queue.h  ut_timer.cpp  ut_timer.h  util.cpp  util.h
app/src/main/cpp/message/include/: DSM_JTT_API.h  VS_kal_general_types.h  dsm_transmit_jtt.h  dsmapp_sms_custom_jtt.h  dsmapp_srv_jtt.h  dsmapp_srvinteraction_jtt.h  others.h
app/src/main/cpp/message/src/: DSM_JTT_API.cpp  dsm_transmit_jtt.cpp  dsmapp_sms_custom_jtt.cpp  dsmapp_srv_jtt.cpp  dsmapp_srvinteraction_jtt.cpp  main.cpp  others.cpp
app/src/main/cpp/msg/: client_conn.cpp  client_conn.h  client_conn_manager.cpp  client_conn_manager.h  dsm_jtt808_api.h  hp_socket_helper.cpp  hp_socket_helper.h  main.cpp  msg_process.cpp  msg_process.h
app/src/main/cpp/msg/api/: dsm_jtt808_api.h
app/src/main/cpp/msg/base/: config_file.cpp  config_file.h  dsm_log.h  jtt808_base.cpp  jtt808_base.h  log4z.h  msg_def.h  public_def.h  singleton.h  type_def.h  util.cpp  util.h
app/src/main/cpp/test/: des_encrypting.cc  des_encrypting.h  encrypting.cc  encrypting.h
app/src/main/java/com/op/: Message.java  MyApp.java  MyReceiver.java  recorder.sh  test.sh
app/src/main/java/com/untouch/: UntouchApp.java
app/src/main/proto/: image.proto
app/src/main/res/layout/: activity_main.xml  activity_main2.xml  camera_calibration_surface_view.xml  setting_lly.xml  tutorial2_surface_view.xml
app/src/main/res/values/: colors.xml  strings.xml  styles.xml
cproject/src/main/cpp/dsm_strategy/: CMakeLists.txt  action_checker.cc
cproject/src/main/cpp/dsm_strategy/judgement_strategy/: fatigue_judger.cc  real_time_detect.cc
cproject/src/main/cpp/dsm_strategy/utils/: CMakeLists.txt
(+156 files in other folders)
