#include(${CMAKE_CURRENT_LIST_DIR}/ConfigureTBB.cmake)
#include(FindTBB.cmake)
#set(OpenBLAS_DIR "$ENV{UNTOUCH_ROOT}/externals/OpenBLAS-0.3.4/${ARCH}/lib/cmake/openblas")
#set(Boost_DIR )
#find_package(OpenBLAS)
#include_directories($ENV{UNTOUCH_ROOT}/externals/OpenBLAS-0.3.4/${ARCH}/include)
#find_package(Boost 1.5.9 REQUIRED COMPONENTS filesystem system)
#set(Boost_INCLUDE_DIR "$ENV{UNTOUCH_ROOT}/externals/boost_1_67_0/${ARCH}/include")
#set(Boost_LIBRARIES boost_filesystem boost_system)
#include_directories("$ENV{UNTOUCH_ROOT}/externals/boost_1_67_0/${ARCH}/include")
#link_directories("$ENV{UNTOUCH_ROOT}/externals/boost_1_67_0/${ARCH}/lib")

#set(OpenBLAS_DIR $ENV{UNTOUCH_ROOT}/externals/openblas-0.2.20/${ARCH}/lib/cmake/openblas)
#find_package(OpenBLAS)
#link_directories("/home/untouch/UNTOUCH_ROOT_LOCAL/externals/openblas-0.2.20/x86_64-linux-gnu/lib")
#find_package(OpenMP)
#if(OpenMP_CXX_FOUND OR OPENMP_FOUND)
#    set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${OpenMP_C_FLAGS}")
#    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS}")
#endif()

include_directories(${CMAKE_CURRENT_LIST_DIR}/include)
#link_directories(${CMAKE_CURRENT_LIST_DIR}/lib)
#list(APPEND ALGORITHM ${TBB_LIBRARIES} gaze_tracking ${Boost_LIBRARIES} ${TBB_LIBRARIES} ${OpenBLAS_LIBRARIES})
